deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-insee-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-insee-data
  template:
    metadata:
      labels:
        app: rag-insee-data
    spec:
      containers:
        - name: api
          image: inseefrlab/llm-open-data-insee:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "30Gi"
              cpu: "5000m"
      nodeSelector: 
        nvidia.com/gpu.product: NVIDIA-H100-PCIe
