deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-insee-data-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: rag-insee-data-deployment
